chore: upgrade deps

--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@heraclius/collection": "^0.2.0",
-    "@heraclius/external-deps-plugin": "^0.1.1",
-    "@heraclius/http-test": "^0.2.0",
-    "@heraclius/query": "^0.1.0",
-    "@types/koa": "^2.15.0",
-    "@types/koa-router": "^7.4.8",
-    "@types/node": "^20.14.10",
+    "@heraclius/collection": "latest",
+    "@heraclius/external-deps-plugin": "latest",
+    "@heraclius/http-test": "latest",
+    "@heraclius/query": "latest",
+    "@types/koa": "latest",
+    "@types/koa-router": "latest",
+    "@types/node": "latest",
     "@types/uuid": "^10.0.0",
-    "koa": "^2.15.3",
-    "koa-body": "^6.0.1",
+    "koa": "latest",
+    "koa-body": "latest",
     "koa-router": "^12.0.1",
-    "unplugin-swc": "^1.5.1",
+    "unplugin-swc": "latest",
     "uuid": "^10.0.0",
-    "vite": "^5.3.3",
-    "vite-plugin-dts": "^3.9.1",
-    "vitest": "^2.0.2"
+    "vite": "latest",
+    "vite-plugin-dts": "latest",
+    "vitest": "latest"
   },
   "publishConfig": {
     "access": "public"
@@ -35,10 +35,10 @@
     "www"
   ],
   "peerDependencies": {
-    "@heraclius/collection": "^0.2.0",
-    "@heraclius/query": "^0.1.0",
-    "koa": "^2.15.3",
-    "koa-body": "^6.0.1",
+    "@heraclius/collection": "latest",
+    "@heraclius/query": "latest",
+    "koa": "latest",
+    "koa-body": "latest",
     "koa-router": "^12.0.1",
     "uuid": "^10.0.0"
   }
