refactor(backend-storage): improve type definition and test imports
- Update getCollection function to accept optional 'type' parameter with
  a default value of 'sql'. This change simplifies the function usage
  when the collection type is not explicitly needed.
- Consolidate server setup in index.ts by removing www.js and directly
  using the Express app instance. This change makes the server setup
  more straightforward and removes unnecessary files.
- Update test imports to reference files directly from the 'src' directory,
  ensuring that tests rely on the source code rather than compiled outputs.
- Adjust package.json to reflect the removal of www.js from the list of published files, maintaining the cleanliness of the package distribution.

BREAKING CHANGE: The www.js file has been removed from the project. Server
setup should now be handled directly within index.ts.

--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "access": "public"
   },
   "files": [
-    "dist",
-    "www.js"
+    "dist"
   ],
   "peerDependencies": {
     "@heraclius/collection": "^0.2.0",
