fix(backend): resolve dependency issues and update import syntax
- Fix import statements to use named imports from 'koa-body'.
- Update 'http.test.ts' to reflect changes in the application structure.- Refactor 'backend-storage' to use the updated 'koa-body' and remove deprecated options.
- Adjust test cases in 'http.test.ts' to use 'post' method and proper headers.- Add missing 'koaBody' middleware to the 'backend-bridge' test setup.
- Ensure consistency in import syntax across files.
- Resolve dependency conflicts and update package-lock.json accordingly.

BREAKING CHANGE: This commit changes the import syntax for 'koa-body' and updates the
usage accordingly. Any consumer of the 'backend-bridge' or 'backend-storage' modules
will need to update their import statements to match the new syntax.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@heraclius/backend-bridge": "^0.7.1",
     "@heraclius/collection": "^0.2.0",
     "@heraclius/external-deps-plugin": "^0.1.1",
     "@heraclius/http-test": "^0.2.0",
@@ -34,6 +35,7 @@
     "dist"
   ],
   "peerDependencies": {
+    "@heraclius/backend-bridge": "^0.7.1",
     "@heraclius/collection": "^0.2.0",
     "@heraclius/query": "^0.1.0",
     "koa": "^2.15.3",
