--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "scripts": {
     "build": "vite build",
     "watch": "vite build --watch",
-    "test": "vitest run"
+    "test": "vitest run",
+    "start": "node dist/www.js"
   },
   "devDependencies": {
     "@heraclius/backend-bridge": "^0.7.2",
-    "@heraclius/collection": "^0.2.0",
+    "@heraclius/collection": "^1.0.0",
     "@heraclius/external-deps-plugin": "^1.0.0",
-    "@heraclius/http-test": "^0.2.0",
-    "@heraclius/query": "^0.1.0",
+    "@heraclius/http-test": "^1.0.0",
+    "@heraclius/query": "^1.0.0",
     "@types/koa": "^2.15.0",
     "@types/koa-router": "^7.4.8",
     "@types/node": "^20.14.11",
@@ -36,8 +37,8 @@
   ],
   "peerDependencies": {
     "@heraclius/backend-bridge": "^0.7.1",
-    "@heraclius/collection": "^0.2.0",
-    "@heraclius/query": "^0.1.0",
+    "@heraclius/collection": "^1.0.0",
+    "@heraclius/query": "^1.0.0",
     "koa": "^2.15.3",
     "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
