feat(storage): add Python storage backend and update Node.js build config
- Implement Python storage backend with basic CRUD operations.- Refactor Node.js build configuration to output to 'dist_node' directory.- Add new 'set_default_collection_type' function for storage backend.
- Update '.gitignore' to exclude new build output directories.
- Modify 'package.json' to include Python dependencies and update scripts.
- Create 'setup.py' for Python package setup.
- Adjust TypeScript configuration to align with new backend structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
+    "outDir": "dist_node",
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
