--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.3.0",
   "description": "提供了基于 Node.js 开发的 RESTful 接口，可以方便地进行数据的增删改查（CRUD）操作以及高效的数据搜索",
   "type": "module",
-  "main": "dist/www.js",
+  "main": "dist_node/www.js",
   "scripts": {
-    "build": "vite build",
+    "build": "vite build && rimraf dist && pipenv run python setup.py sdist bdist_wheel",
     "watch": "vite build --watch",
     "test": "vitest run",
-    "start": "node dist/www.js"
+    "start": "node dist_node/www.js"
   },
   "devDependencies": {
     "@heraclius/backend-bridge": "^1.1.0",
