--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@heraclius/backend-storage",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "提供了基于 Node.js 开发的 RESTful 接口，可以方便地进行数据的增删改查（CRUD）操作以及高效的数据搜索",
   "type": "module",
   "main": "dist_node/www.js",
@@ -8,11 +8,12 @@
     "build": "vite build && rimraf dist && pipenv run python setup.py sdist bdist_wheel",
     "watch": "vite build --watch",
     "test": "vitest run",
-    "start": "node dist_node/www.js"
+    "start": "node dist_node/www.js",
+    "upload": "twine upload dist/*"
   },
   "devDependencies": {
     "@heraclius/backend-bridge": "^1.1.0",
-    "@heraclius/collection": "^1.1.0",
+    "@heraclius/collection": "^1.2.0",
     "@heraclius/external-deps-plugin": "^1.1.0",
     "@heraclius/http-test": "^1.1.0",
     "@heraclius/query": "^1.1.0",
